// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Progress renders correctly 1`] = `
<div
  class="za-progress theme-primary shape-line"
>
  <div
    class="za-progress-inner"
    style="height:4px;"
  >
    <div
      class="za-progress-bg"
      style="width:10%;"
    />
  </div>
</div>
`;

exports[`Progress renders has children correctly 1`] = `
<div
  class="za-progress theme-primary shape-line"
>
  <div
    class="za-progress-inner"
    style="height:4px;"
  >
    <div
      class="za-progress-bg"
      style="width:10%;"
    />
  </div>
  <div
    class="za-progress-text"
  >
    foo
  </div>
</div>
`;

exports[`Progress renders shape is circle correctly 1`] = `
<div
  class="za-progress theme-primary shape-circle"
>
  <div
    class="za-progress-inner"
  >
    <svg
      class="za-spinner theme-primary"
      viewbox="0 0 100 100"
    >
      <circle
        class="za-spinner-path"
        cx="50"
        cy="50"
        fill="none"
        r="48"
        style="stroke-width:4;"
      />
      <circle
        class="za-spinner-line"
        cx="50"
        cy="50"
        fill="none"
        r="48"
        style="stroke-dasharray:30.15928947446201 301.59289474462014;stroke-width:4;"
      />
    </svg>
  </div>
  <div
    class="za-progress-text"
  >
    foo
  </div>
</div>
`;
